<resources>
    <string name="app_name">BiotopeApp</string>
    <string name="no_network_connection_message">No network connection</string>

    <string name="map_parking_snippet_title"> %s </string>
    <string name="map_charger_snippet_description">Charging speed: %s</string>
    <string name="click_to_see_details">See details</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--Queries to the server-->
    <string name="query_search_all_services_iotbnb"><![CDATA[<omiEnvelope xmlns=\"http://www.opengroup.org/xsd/omi/1.0/\" version=\"1.0\" ttl=\"0\"><call msgformat=\"odf\"><msg><Objects xmlns=\"http://www.opengroup.org/xsd/odf/1.0/\"><Object><id>Service</id><InfoItem name=\"searchServices\"><value type=\"odf\"><Objects><Object><id>MyParameters</id><InfoItem name=\"price\"><value type=\"xs:String\">0</value></InfoItem><InfoItem name=\"type\"><value type=\"xs:String\">all</value></InfoItem><InfoItem name=\"reputation\"><value type=\"xs:String\">all</value></InfoItem><Object type=\"schema:GeoCoordinates\"><id>geo</id><InfoItem name=\"latitude\"><value type=\"xs:string\">%1$f</value></InfoItem><InfoItem name=\"longitude\"><value type=\"xs:String\">%2$f</value></InfoItem><InfoItem name=\"radius\"><value type=\"xs:String\">1000</value></InfoItem></Object></Object></Objects></value></InfoItem></Object></Objects></msg></call></omiEnvelope>]]></string>
    <string name="query_find_evParkinglots"><![CDATA[<omiEnvelope xmlns=\"http://www.opengroup.org/xsd/omi/1.0/\" version=\"1.0\" ttl=\"0\"><call msgformat=\"odf\"><msg><Objects xmlns=\"http://www.opengroup.org/xsd/odf/1.0/\"><Object><id>ParkingService</id><InfoItem name=\"FindParking\"><value unixTime=\"1503488290\" type=\"odf\" dateTime=\"2017-08-23T14:38:10.575+03:00\"><Objects><Object type=\"FindParkingRequest\"><id>Parameters</id><description lang=\"English\">List of possible parameters to request.</description><InfoItem type=\"schema:Distance\" name=\"DistanceFromDestination\" required=\"true\"><value unixTime=\"1503488290\" dateTime=\"2017-08-23T14:38:10.575+03:00\">1000</value></InfoItem><Object required=\"true\" type=\"schema:GeoCoordinates\"><id>Destination</id><InfoItem name=\"latitude\" required=\"true\"><value unixTime=\"1503488290\" type=\"xs:double\" dateTime=\"2017-08-23T14:38:10.575+03:00\">%1$f</value></InfoItem><InfoItem name=\"longitude\" required=\"true\"><value unixTime=\"1503488290\" type=\"xs:double\" dateTime=\"2017-08-23T14:38:10.575+03:00\">%2$f</value></InfoItem></Object><Object required=\"true\" type=\"mv:ElectricVehicle\"><id>Vehicle</id></Object></Object></Objects></value></InfoItem></Object></Objects></msg></call></omiEnvelope>]]></string>
    <string name="query_find_evFastChargeParkinglots"><![CDATA[<omiEnvelope xmlns=\"http://www.opengroup.org/xsd/omi/1.0/\" version=\"1.0\" ttl=\"0\"><call msgformat=\"odf\"><msg><Objects xmlns=\"http://www.opengroup.org/xsd/odf/1.0/\"><Object><id>ParkingService</id><InfoItem name=\"FindParking\"><value type=\"odf\"><Objects><Object type=\"FindParkingRequest\"><id>Parameters</id><InfoItem type=\"schema:Distance\" name=\"DistanceFromDestination\"><value>1000</value></InfoItem><InfoItem type=\"mv:wantCharging\" name=\"wantCharging\"><value type=\"xs:boolean\">true</value></InfoItem><Object type=\"schema:GeoCoordinates\"><id>Destination</id><InfoItem name=\"latitude\"><value type=\"xs:double\">%1$f</value></InfoItem><InfoItem name=\"longitude\"><value type=\"xs:double\">%2$f</value></InfoItem></Object><Object type=\"mv:ElectricVehicle\"><id>Vehicle</id></Object><Object type=\"mv:Charger\"><id>Charger</id><Object type=\"list\"><id>Plugs</id><Object type=\"mv:Plug\"><id>Plug</id><InfoItem type=\"mv:isFastChargeCapable\" name=\"isFastChargeCapable\"><value type=\"xs:boolean\">true</value></InfoItem></Object></Object></Object></Object></Objects></value></InfoItem></Object></Objects></msg></call></omiEnvelope>]]></string>
    <string name="query_find_carParkinglots"><![CDATA[<omiEnvelope xmlns=\"http://www.opengroup.org/xsd/omi/1.0/\" version=\"1.0\" ttl=\"0\"><call msgformat=\"odf\"><msg><Objects xmlns=\"http://www.opengroup.org/xsd/odf/1.0/\"><Object><id>ParkingService</id><InfoItem name=\"FindParking\"><value unixTime=\"1503488290\" type=\"odf\" dateTime=\"2017-08-23T14:38:10.575+03:00\"><Objects><Object type=\"FindParkingRequest\"><id>Parameters</id><description lang=\"English\">List of possible parameters to request.</description><InfoItem type=\"schema:Distance\" name=\"DistanceFromDestination\" required=\"true\"><value unixTime=\"1503488290\" dateTime=\"2017-08-23T14:38:10.575+03:00\">1000</value></InfoItem><InfoItem type=\"mv:wantCharging\" name=\"wantCharging\"><value type=\"xs:boolean\">false</value></InfoItem><Object required=\"true\" type=\"schema:GeoCoordinates\"><id>Destination</id><InfoItem name=\"latitude\" required=\"true\"><value unixTime=\"1503488290\" type=\"xs:double\" dateTime=\"2017-08-23T14:38:10.575+03:00\">%1$f</value></InfoItem><InfoItem name=\"longitude\" required=\"true\"><value unixTime=\"1503488290\" type=\"xs:double\" dateTime=\"2017-08-23T14:38:10.575+03:00\">%2$f</value></InfoItem></Object><Object required=\"true\" type=\"mv:Car\"><id>Vehicle</id></Object></Object></Objects></value></InfoItem></Object></Objects></msg></call></omiEnvelope>]]></string>
    <string name="query_find_evSpaceList"><![CDATA[<omiEnvelope xmlns=\"http://www.opengroup.org/xsd/omi/1.0/\" version=\"1.0\" ttl=\"0\"><read msgformat=\"odf\"><msg><Objects xmlns=\"http://www.opengroup.org/xsd/odf/1.0/\"><Object><id>ParkingService</id><Object><id>ParkingFacilities</id><Object><id>%1$s</id><Object><id>ParkingSpaces</id></Object></Object> </Object></Object></Objects></msg></read></omiEnvelope>]]></string>
    <string name="query_find_parking_facility"><![CDATA[<omiEnvelope xmlns=\"http://www.opengroup.org/xsd/omi/1.0/\" version=\"1.0\" ttl=\"0\"><read msgformat=\"odf\"><msg><Objects xmlns=\"http://www.opengroup.org/xsd/odf/1.0/\"><Object><id>ParkingService</id><Object><id>ParkingFacilities</id><Object><id>%1$s</id></Object></Object></Object></Objects></msg></read></omiEnvelope>]]></string>
    <string name="query_start_charging"><![CDATA[<omiEnvelope xmlns=\"http://www.opengroup.org/xsd/omi/1.0/\" version=\"1.0\" ttl=\"0\"><write msgformat=\"odf\"><msg><Objects xmlns=\"http://www.opengroup.org/xsd/odf/1.0/\"><Object><id>ParkingService</id><Object><id>ParkingFacilities</id><Object><id>%1$s</id><Object><id>ParkingSpaces</id><Object><id>%2$s</id><Object type=\"mv:Charger\"><id>%3$s</id><InfoItem name=\"available\"><value>book</value></InfoItem></Object></Object></Object></Object></Object></Object></Objects></msg></write></omiEnvelope>]]></string>
    <string name="filter_name_car">Car</string>
    <string name="filter_name_electric_car">Electric Car</string>
    <string name="filter_name_fast_charge">Fast Charge</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="parking_facility_id_label">Parking Facility Id:</string>
    <string name="parking_facility_opening_hours_label">Opening Hours:</string>
    <string name="parkingFacility_openning_hours_string">%s - %s</string>
    <string name="parking_facility_address_label">Address:</string>
    <string name="parking_facility_owner_label">Owner:</string>
    <string name="not_available_string">n/a</string>
    <string name="title_activity_parking_space">ParkingSpaceActivity</string>
    <string name="vehicle_type_label">Vehicle Type:</string>
    <string name="available_now_label">Available now:</string>
    <string name="total_number_label">Total number:</string>
    <string name="valid_for_disabled_label">Valid for disabled:</string>
    <string name="yes_valid">Yes</string>
    <string name="no_valid">No</string>
    <string name="parking_space_id_label">Parking Space ID:</string>
    <string name="available_label">Available:</string>
    <string name="yes_available">yes</string>
    <string name="no_available">no</string>
    <string name="ev_charger_available_label">EV Charger available:</string>
    <string name="vehicle_width_limit_label">Vehicle Width Limit:</string>
    <string name="vehicle_height_limit_label">Vehicle Height Limit:</string>
    <string name="vehicle_length_limit_label">Vehicle Length Limit:</string>
    <string name="charger_id_label">Charger ID:</string>
    <string name="charger_brand_label">Charger Brand:</string>
    <string name="charger_model_label">Charger Model:</string>
    <string name="current_type_label">Current Type:</string>
    <string name="voltage_label">Voltage in V:</string>
    <string name="current_label">Current in A:</string>
    <string name="power_label">Power in KW:</string>
    <string name="fast_charge_label">Fast Charge Available:</string>
    <string name="three_phased_current_label">Three Phased Current Available:</string>
    <string name="not_known">n/a</string>
    <string name="no_info_available_toast">No information available</string>
    <string name="start_charging_button_text">Start Charging</string>
    <string name="charging_enabled_toast">Charging service enabled</string>
    <string name="smth_got_wrong_toast">Something got wrong. Try again!</string>
    <string name="update_needed_toast">Update needed</string>
    <string name="filter_name_iotbnb">IoTBnB</string>
    <string name="no_available_parking_lot_toast">No available parking lot</string>
    <string name="EV_parking_lot_snippet_title">EV Parking Lot</string>

</resources>
